The Transform 'Y' label has gone missing #62678

Closed
opened 2019-03-17 12:35:45 +01:00 by William Reynish · 14 comments

System Information
Operating system: 10.14.3 (18D109)
Graphics card: AMD Radeon R9 M395X 4096 MB

Blender Version
Broken: 2.80 beta, March 17
Worked: 2.80 beta, March 15

Short description of error
The Transform 'Y' label has gone missing

Exact steps for others to reproduce the error

  • Open Blender
  • Go to Properties > Object > Transform

Screenshot 2019-03-17 at 12.33.07.png

Tested at various UI scales and on various systems. Same thing.

**System Information** Operating system: 10.14.3 (18D109) Graphics card: AMD Radeon R9 M395X 4096 MB **Blender Version** Broken: 2.80 beta, March 17 Worked: 2.80 beta, March 15 **Short description of error** The Transform 'Y' label has gone missing **Exact steps for others to reproduce the error** - Open Blender - Go to Properties > Object > Transform ![Screenshot 2019-03-17 at 12.33.07.png](https://archive.blender.org/developer/F6838661/Screenshot_2019-03-17_at_12.33.07.png) Tested at various UI scales and on various systems. Same thing.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

This comment was removed by @WilliamReynish

*This comment was removed by @WilliamReynish*
Jacques Lucke was assigned by Brecht Van Lommel 2019-03-17 13:07:41 +01:00
Member

I can reproduce it, it is caused by my "fix" from friday. Checking what's going on...

I just don't understand why we did not see that earlier. I'm 100% sure that I checked this, and you probably as well.

I can reproduce it, it is caused by my "fix" from friday. Checking what's going on... I just don't understand why we did not see that earlier. I'm 100% sure that I checked this, and you probably as well.

This issue was referenced by cfd909f184

This issue was referenced by cfd909f184ccd87ed6dcfa45a5ab93d8fc5cb742
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

I’m puzzled too. I definitely don’t remember this occurring then.

I’m puzzled too. I definitely don’t remember this occurring then.
Member

hmm, unfortunately I found another case where this problem occurs.
Take a Separate XYZ node and zoom in and out. Sometimes the Y disappears.
The problem is that BLF_width(...) returns 7, but g->width is 9 (g is the glyph).
This is because g->advance is 7.
Not sure at which level this has to be fixed.
All these offsets are a bit confusing. Is this very redundant or does it only feel like it is?

@WilliamReynish, can you reproduce this?

hmm, unfortunately I found another case where this problem occurs. Take a `Separate XYZ` node and zoom in and out. Sometimes the `Y` disappears. The problem is that `BLF_width(...)` returns `7`, but `g->width` is `9` (`g` is the glyph). This is because `g->advance` is `7`. Not sure at which level this has to be fixed. All these offsets are a bit confusing. Is this very redundant or does it only feel like it is? @WilliamReynish, can you reproduce this?
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Yes, I can reproduce that case too here.

Maybe it's a hack, but could we just add some padding to the width to ensure that we don't clip the text prematurely?

Although I suppose the correct thing would be to simply calculate the width correctly.

Yes, I can reproduce that case too here. Maybe it's a hack, but could we just add some padding to the width to ensure that we don't clip the text prematurely? Although I suppose the correct thing would be to simply calculate the width correctly.
Member

Adding a padding in various places is what the old code did.
That is not necessarily bad, and we might have to do it in the end, but it would still be nice to find the actual issue.

The question is, what is the width of a text (i.e. what should BLF_width return).
Is it the pixel perfect total width (including shadows).
Or should various offsets and kerning information be taken into account?

In the case of Y: advance = 7, width = 9, pos_x = -1.
Is `BLF_width("Y", ...)`` 7, 8 or 9 (there are reasons for every case)?

Adding a padding in various places is what the old code did. That is not necessarily bad, and we might have to do it in the end, but it would still be nice to find the actual issue. The question is, what is the width of a text (i.e. what should `BLF_width` return). Is it the pixel perfect total width (including shadows). Or should various offsets and kerning information be taken into account? In the case of `Y`: `advance = 7`, `width = 9`, `pos_x = -1`. Is `BLF_width("Y", ...)`` 7, 8 or 9 (there are reasons for every case)?

I mean, we really need the final size of the text, after kerning and other things, otherwise the width will always be incorrect.

I mean, we really need the final size of the text, after kerning and other things, otherwise the width will always be incorrect.
Member

So, in this specific case. What should it be?

So, in this specific case. What should it be?

This issue was referenced by 1b1b604596

This issue was referenced by 1b1b60459686de36cb8e307d8fce711bc6cf87af
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62678
No description provided.